--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*!
 * Start Bootstrap - Resume v6.0.1 (https://startbootstrap.com/template-overviews/resume)
 * Copyright 2013-2020 Start Bootstrap
@@ -9799,7 +9798,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: cornflowerblue !important;
+  color: royalblue !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
